--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ElasticsearchSettings": {
-    "Uri": "http://localhost:9200", //  Docker üzerinde çalışan Elasticsearch sunucunuzun adresi.
-    "DefaultIndex": "sozcu_articles" // Python scriptinizin verileri kaydettiği indeks adı, ES_INDEX_NAME
+    "Uri": "http://localhost:9200",
+    "DefaultIndex": "sozcu_articles"
   }
 }
